# hfst

./: .gitignore  CMakeLists.txt  config.h.in
back-ends/: CMakeLists.txt
back-ends/dlfcn/: dlfcn.c
back-ends/foma/: CMakeLists.txt  lex.lexc.c  lex.yy.c
back-ends/openfst/src/lib/: CMakeLists.txt
libhfst/: CMakeLists.txt
libhfst/src/: CMakeLists.txt  HfstDataTypes.h
libhfst/src/implementations/: CMakeLists.txt
libhfst/src/parsers/: CMakeLists.txt  XfstCompiler.cc
